Add aula 4 curvas

--- a/5 periodo/Curvas_e_superficies.tex
+++ b/5 periodo/Curvas_e_superficies.tex
@@ -22,6 +22,7 @@
 \pagestyle{plain}
 \thispagestyle{plain}
 
+\newtheorem{prop}{Proposition}
 \newtheorem{theorem}{Teorema}
 \newtheorem{corollary}{Corolário}[theorem]
 \newtheorem{lemma}[theorem]{Lema}
@@ -53,6 +54,9 @@ Wellington Silva\hfill\textbf{Due:} \duedate\\
 \vspace{4.0mm}
 
 \textbf{\nameref{s2}}
+\vspace{4.0mm}
+
+\textbf{\nameref{s3}}
 \vspace{4.0mm}
 
 \newpage
@@ -118,6 +122,20 @@ Seja $\alpha(t): (a, b) \rightarrow \mathbb{R}^2$ r $\beta(S): (c, d) \rightarro
     \item $\beta(S)$ é uma reparametrização positiva de $\alpha$ se $\phi'(S) > 0,\ \forall S$
     \item $\beta(S)$ é uma reparametrização negativa de $\alpha$ se $\phi'(S) < 0,\ \forall S$
 \end{itemize}
+\end{definition}
+
+\section*{Reparametrização (Aula 4)}
+\label{s3}
+\begin{definition}
+Qualquer reparametrização de uma c.p. regular é regular (i.e. difeomorfismos preservam regularidade).
+\end{definition}
+
+\begin{prop}
+A função L (comprimento de arco) é um difeomorfismo.
+\end{prop}
+
+\begin{definition}
+Toda curva regular $\alpha: I \rightarrow \mathbb{R}^2$ admite reparametrização por comprimento de arco.
 \end{definition}
 
 \end{document}
